# ross3d

./: LICENSE  README.md  index.html  pyproject.toml
ross3d/: mm_utils.py  utils.py  video_utils.py
ross3d/eval/: eval_multi3drefer.py  eval_scan2cap.py  eval_scanqa.py  eval_scanrefer.py  eval_sqa3d.py  model_multi3drefer.py  model_scan2cap.py  model_scanqa.py  model_scanrefer.py  model_sqa3d.py
ross3d/model/: __init__.py  builder.py  consolidate.py  make_delta.py  ross3d_arch.py
ross3d/model/language_model/: ross3d_qwen.py
ross3d/model/language_model/qwen2/: modeling_qwen2.py
ross3d/model/multimodal_denoiser/: denoiser_dit_multi.py
ross3d/model/multimodal_denoiser/diffusion_utils/: gaussian_diffusion.py
ross3d/model/multimodal_encoder/: clip_encoder.py  hf_vision.py  open_clip_encoder.py  siglip_encoder.py
ross3d/model/multimodal_encoder/dev_eva_clip/: eva_vit.py
ross3d/model/multimodal_encoder/eva_clip/: eva_clip_encoder.py  eva_vit.py
ross3d/model/multimodal_projector/: builder.py
ross3d/train/: ross3d_trainer.py  train_3d.py
scripts/3d/eval/: eval_all.sh  eval_multi3drefer.sh  eval_scan2cap.sh  eval_scanqa.sh  eval_scanrefer.sh  eval_sqa3d.sh
scripts/3d/preprocessing/: process_mmscan.py
scripts/3d/train/: train_ross3d.sh  video3dllm_223k.yaml
